--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -11,6 +11,10 @@
 @import "config/layout";
 @import "config/transitions";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 // General
 @import "includes/global";
 @import "includes/components";
